2006-10-30  Chris Dunlap  <cdunlap@llnl.gov>

	* doc/credential_v3_format.txt: Added comment specifying encryption is
	  performed in cipher block chaining mode.

2006-10-02  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.sysconfig: Tweaked commented OPTIONS var.

2006-10-01  Chris Dunlap  <cdunlap@llnl.gov>

	* README, src/libcommon/munge.7.in: Changed header name.

2006-09-26  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.4.

	* HISTORY, META, NEWS: Updated for 0.5.4 release.

	* src/etc/munge.init.in (signal_process): Replaced use of return code
	  from second kill with another query_pids.  This protects against the
	  first kill taking slightly too long and the second kill not finding
	  the process.

	* src/libcommon/log.c (_log_die): Changed "c" var type to "signed char"
	  since a char is unsigned on AIX.
	* src/munged/munged.c (daemonize_init): Changed "priority" var type to
	  "signed char" since a char is unsigned on AIX.

	* src/munged/auth_recv.c (_check_auth_client_dir):
	  Combined tests for write permissions and the sticky bit being set.

	* src/etc/munge.init.in (service_restart): Replaced negated conditional
	  with if/else since Solaris shell complains about commands starting
	  with "!".

	* src/munged/path.c, src/munged/path.h: Fixed bug on FreeBSD where
	  PATH_MAX was not being defined by "path.h".

	* src/etc/Makefile.am: Fixed installed directory ownership on
	  $(localstatedir) & $(localstatedir)/*.

2006-09-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am, src/libcommon/Makefile.am,
	  src/libmunge/Makefile.am, src/munge/Makefile.am,
	  src/munged/Makefile.am: Fixed bug on AIX causing directories created
	  during "make install" to have wrong permissions inherited from umask.

	* src/munged/auth_recv.c (_check_auth_client_dir):
	  Added auth client dir ownership check.

	* BUGS, PLATFORMS, TODO: Updated.

	* README, munge.spec, src/libcommon/munge.7.in: Updated description.

	* QUICKSTART: Updated.
